Working section bedroons and services

--- a/index.html
+++ b/index.html
@@ -94,28 +94,38 @@
           </div>
         </div>
       </div>
-      <div class="container">
+    </section>
+    <section class="container">
+      <div class="bedrooms">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 mb-3">
             <div class="card">
               <img src="img-1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content
+                <h5>Quarto Simples</h5>
+                <p class="card-text">
+                  Feito sob medida para você que viaja sozinho. Conforto e praticidade para sua estadia ser agradável
+                  e
+                  satisfatória com um design moderno, composto por: - Cama solteiro - Ar condicionado - TV a cabo 32"
+                  -
+                  Duchas com aquecimento central por energia solar - Mesa de trabalho - Acesso a internet wifi
+                  gratuito
+                  e amenities de qualidade
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="card">
-              <img src="img-1.png" class="card-img-top" alt="...">
+              <img src="img-2.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content.
+                <h5>Quarto Duplo</h5>
+                <p class="card-text">
+                  Confortavelmente pensado para tornar sua estadia mais prática e relaxante com um design moderno,
+                  agradável composto por - Cama Casal ou duas camas solteiro - Ar condicionado - TV a cabo 32" -
+                  Duchas
+                  com aquecimento central por energia solar - Mesa de trabalho - Acesso a internet wifi gratuito e
+                  amenities de qualidade.
                 </p>
               </div>
             </div>
@@ -123,11 +133,156 @@
         </div>
       </div>
     </section>
+    <section class="container">
+      <div class="container services">
+        <div class="swiper mySwiper2 pb-4">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card">
+                <img src="img-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">
+                    Acesso à internet banda larga, WI-FI, gratuitamente, em todas as dependências do hotel.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card">
+                <img src="img-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">
+                    Ótimo café da manhã, com uma variedade de bolos, pães, frutas, sucos e outras delícias.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card">
+                <img src="img-5.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">
+                    Para sua comodidade o Alfa Hotel possui um estacionamento privativo, a sua disposição.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card">
+                <img src="img-6.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">
+                    O Alfa Hotel está de acordo com os padrões de acessibilidade, pronto pra lhe receber.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="prices pt-4">
+      <div class="prices-banner">
+        <h1 class="text-center text-white pt-4">Tarifas</h1>
+      </div>
+      <div class="container prices-container">
+        <div class="row justify-content-center">
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="text-center text-white">QUARTO SIMPLES</h5>
+                <h4 class="text-center text-white">R$ 199,00</h4>
+                <p class="text-center text-white">Diária</p>
+              </div>
+              <div class="card-footer bg-white">
+                <p class="text-center">
+                  1 Pessoa
+                </p>
+                <p class="text-center">
+                  Café da manhã
+                </p>
+                <p class="text-center">
+                  Estacionamento
+                </p>
+                <p class="text-center">
+                  Wifi
+                </p>
+                <div class="row justify-content-center pt-4">
+                  <div class="col-8">
+                    <div class="d-grid gap-2">
+                      <button type="submit" class="btn text-white py-2">RESERVAR</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="text-center text-white">QUARTO SIMPLES</h5>
+                <h4 class="text-center text-white">R$ 199,00</h4>
+                <p class="text-center text-white">Diária</p>
+              </div>
+              <div class="card-footer bg-white">
+                <p class="text-center">
+                  1 Pessoa
+                </p>
+                <p class="text-center">
+                  Café da manhã
+                </p>
+                <p class="text-center">
+                  Estacionamento
+                </p>
+                <p class="text-center">
+                  Wifi
+                </p>
+                <div class="row justify-content-center pt-4">
+                  <div class="col-8">
+                    <div class="d-grid gap-2">
+                      <button type="submit" class="btn text-white py-2">RESERVAR</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="text-center text-white">QUARTO SIMPLES</h5>
+                <h4 class="text-center text-white">R$ 199,00</h4>
+                <p class="text-center text-white">Diária</p>
+              </div>
+              <div class="card-footer bg-white">
+                <p class="text-center">
+                  1 Pessoa
+                </p>
+                <p class="text-center">
+                  Café da manhã
+                </p>
+                <p class="text-center">
+                  Estacionamento
+                </p>
+                <p class="text-center">
+                  Wifi
+                </p>
+                <div class="row justify-content-center pt-4">
+                  <div class="col-8">
+                    <div class="d-grid gap-2">
+                      <button type="submit" class="btn text-white py-2">RESERVAR</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <!-- Bootstrap Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Jqyery -->
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <!-- Swiper JS -->
@@ -135,6 +290,7 @@
   <!-- Data Picker -->
   <script
     src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js'></script>
+
   <script>
     var swiper = new Swiper(".mySwiper", {
       loop: true,
@@ -143,6 +299,31 @@
         disableOnInteraction: false
       },
     });
+
+    var swiper = new Swiper(".mySwiper2", {
+      spaceBetween: 30,
+      freeMode: true,
+      loop: true,
+      autoplay: {
+        delay: 5000,
+        disableOnInteraction: false
+      },
+      breakpoints: {
+        640: {
+          slidesPerView: 2,
+          spaceBetween: 20,
+        },
+        768: {
+          slidesPerView: 3,
+          spaceBetween: 20,
+        },
+        1024: {
+          slidesPerView: 4,
+          spaceBetween: 20,
+        },
+      }
+    });
+
     $('#datepicker-in').datepicker();
     $('#datepicker-out').datepicker();
   </script>
