--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="bg-white">
     <div class="container">
       <div class="navbar-brand p-3 position-absolute">
         <a href="#">
@@ -275,6 +275,56 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="gallery">
+      <div class="container">
+        <h1 class="text-center">Conheça o hotel</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img-1.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-7.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-2.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-1.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-7.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-2.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-1.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-7.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-2.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-1.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-7.png" height="300px" width="100%" class="pb-3">
+          </div>
+          <div class="col-md-4">
+            <img src="img-2.png" height="300px" width="100%" class="pb-3">
+          </div>
+        </div>
+        <div class="row justify-content-center pt-4">
+          <div class="col-md-3 col-9">
+            <div class="d-grid">
+              <button class="btn text-white py-2">VISITE A GALERIA</button>
             </div>
           </div>
         </div>
